scrollbars fix

--- a/src/components/AdminLTE/Box/Box.less
+++ b/src/components/AdminLTE/Box/Box.less
@@ -1,6 +1,6 @@
 .limited {
   max-height: 600px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .unlimited {
